--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     compile 'com.android.support:support-v4:+'
 
     compile 'com.google.android.gms:play-services-plus:+'
+    compile 'com.google.android.gms:play-services-identity:+'
+    compile 'com.google.android.gms:play-services-base:+'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:+'
     compile 'com.google.apis:google-api-services-oauth2:+'
     compile 'com.google.apis:google-api-services-plus:+'
     compile 'com.google.api-client:google-api-client:+'
