--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
@@ -24,6 +32,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:design:+'
+    compile 'com.android.support:recyclerview-v7:+'
+
+
+    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:+'
+    compile 'com.jpardogo.materialtabstrip:library:+'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.4.4@jar'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.4@jar'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.4@jar'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 
     compile 'com.google.android.gms:play-services-plus:+'
     compile 'com.google.android.gms:play-services-identity:+'
