--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:support-v4:+'
     compile 'com.android.support:design:+'
     compile 'com.android.support:recyclerview-v7:+'
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.4@jar'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.4@jar'
     compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'us.feras.mdv:markdownview:1.1.0'
 
     compile 'com.google.android.gms:play-services-plus:+'
     compile 'com.google.android.gms:play-services-identity:+'
