--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,20 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
+    signingConfigs{
+        debug{
+            storeFile file("keystore/debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+//        release{
+//            storeFile file("keystore/release.keystore")
+//            storePassword "hogehoge"
+//            keyAlias "fugahoge"
+//            keyPassword "fugafuga"
+//        }
+    }
 }
 
 repositories {
